--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,9 @@ body {
 .heading-primary {
     color: #fff;
     text-transform: uppercase;
+
+    /*to fix animation jerk issue*/
+    backface-visibility: hidden;
 }
 
 .heading-primary-main {
@@ -65,6 +68,15 @@ body {
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 35px;
+
+    /*KeyFrame name for animation */
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+
+    /* animation-iteration-count: 3 */
+
+    /* animation-delay: 3s; */
 }
 
 .heading-primary-sub {
@@ -72,4 +84,36 @@ body {
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 17.4px;
+
+    animation:moveInRight 1s ease-in-out;
+}
+
+@keyframes moveInLeft{
+    0% {
+        opacity: 0;
+        transform: translateX(-100px)
+    }
+    80%{
+        transform: translateX(10px)
+    }
+
+    100%{
+        opacity: 1;
+        transform: translateX(0)
+    }
+}
+
+@keyframes moveInRight{
+    0% {
+        opacity: 0;
+        transform: translateX(100px)
+    }
+    80%{
+        transform: translateX(-10px)
+    }
+
+    100%{
+        opacity: 1;
+        transform: translateX(0)
+    }
 }
